--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,16 @@
 {
-    "name": "coderstephen/libnntp",
+    "name": "coderstephen/nntp",
     "description": "Async NNTP news protocol library",
     "type": "library",
     "require": {
         "php": ">=7.0",
-        "icicleio/socket": "~2.0",
-        "icicleio/dns": "~2.0"
+        "icicleio/dns": "~2.0",
+        "icicleio/log": "~2.0",
+        "icicleio/socket": "~2.0"
     },
     "autoload": {
         "psr-4": {
-            "LibNNTP\\": "src/"
+            "nntp\\": "src/"
         }
     },
     "minimum-stability": "dev"
